--- a/package.json
+++ b/package.json
@@ -2,7 +2,16 @@
   "name": "4pc4w8rn--run",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "maplibre-gl": "4.5.2"
+  },
+  "devDependencies": {
+    "vite": "^5.4.8"
   }
 }
